[metadata]
name = balderhub-http
description = balderhub-http: BalderHub Project that provides features for working with the HTTP protocol
author = Max Stahlschmidt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://hub.balder.dev/projects/http
license = MIT
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = test, systemtest, reusable, scenario, junit, balder
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Testing
    Topic :: Utilities
project_urls =
    Source=https://github.com/balder-dev/balderhub-http/
    Tracker=https://github.com/balder-dev/balderhub-http/issues

[options]
packages =
    balderhub.http
    balderhub.http.lib
    balderhub.http.lib.scenario_features
    balderhub.http.lib.setup_features
    balderhub.http.lib.utils
    balderhub.http.scenarios
    balderhub.http.setups

install_requires =
    baldertest
python_requires = >=3.9
package_dir =
    =src
setup_requires =
    setuptools
    setuptools-scm>=6.0
zip_safe = no
